took out protobuf requirement version

--- a/examples/cognitive_drone/requirements.txt
+++ b/examples/cognitive_drone/requirements.txt
@@ -26,7 +26,7 @@ opt-einsum==3.3.0
 packaging==23.2
 pillow==10.2.0
 promise==2.3
-protobuf==4.25.1
+protobuf
 pyarrow==14.0.1
 requests==2.31.0
 six==1.16.0
