--- a/examples/cognitive_drone/requirements.txt
+++ b/examples/cognitive_drone/requirements.txt
@@ -42,7 +42,7 @@ toml==0.10.2
 tqdm==4.66.1
 typer==0.9.0
 tyro==0.7.3
-typing-extensions==4.8.0
+typing-extensions
 urllib3==2.2.0
 websocket-client==1.7.0
 werkzeug==3.0.1
