--- a/examples/cognitive_drone/requirements.txt
+++ b/examples/cognitive_drone/requirements.txt
@@ -19,8 +19,7 @@ libclang==16.0.6
 markdown==3.5.2
 markupsafe==2.1.5
 ml-dtypes==0.2.0
-numpy==1.26.3
-# Replace with local installation
+numpy
 -e ../..
 opt-einsum==3.3.0
 packaging==23.2
